--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -86,7 +86,7 @@
   border: 0.5px solid #F1F5FE;
   margin: 0px;
   width: 100%;
-  height: 38px;
+  height: 42px;
   outline:0px;
   background-color: #F1F5FE;
   padding: 10px 16px 10px 16px;
@@ -128,13 +128,6 @@
   color: #027e21;
 }
 
-.list_header{
-  color:#0041C4;
-  text-align: center;
-  padding: 12px 12px 0;
-  font-weight: 500;
-  // margin-top: 10px;
-}
 
 .input-group-text{
   padding: 8.5px;
@@ -380,5 +373,35 @@
   margin-top: 2px
 }
 
+.col-lg-9-8 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc(100% - var(--width-button) * 2) !important
+  }
 
-  
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-7-6 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc(100% - var(--width-button) * 4) !important
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-1-1 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: var(--width-button) !important;
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
