--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -427,7 +427,7 @@
                       {{item.cancelDate | date:'dd/MM/yyyy HH:mm:ss'}}
                     </span>
                     <span *ngIf = "this.filter_status == 40" class="item_date">
-                      {{item.sign_time | date:'dd/MM/yyyy'}}
+                      {{item.success_time | date:'dd/MM/yyyy HH:mm:ss'}}
                     </span>
                     <span *ngIf = "this.filter_status != 20 && this.filter_status != 33 && this.filter_status != 34 && this.filter_status != 31 && this.filter_status != 32 && this.filter_status != 40" class="item_date">
                       {{item.updated_at | date:'dd/MM/yyyy HH:mm:ss'}}
