--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -175,6 +175,35 @@
       <p>của {{countPage()}} trang</p>
   </div>
   </div>
-  <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
+  <div class="footer_page_number">
+    <span class="footer_page_number_chart_number">
+      {{'chart.number' | translate}}:
+    </span>
+    <span>
+      {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+    </span>
+  </div>
+</div>
+<div class="contract_footer_responsive">
+  <div class="footer_title"></div>
+  <div class="footer_pagination">
+    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractTemplateList()" previousLabel="" nextLabel=""></pagination-controls>
+    
+    <div class="enterPage" *ngIf="pageTotal > 0">
+      <div class="enter_page_responsive">
+        <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+        <p>của {{countPage()}} trang</p>
+      </div>
+      <div class="footer_page_number">
+        <span class="footer_page_number_chart_number">
+          {{'chart.number' | translate}}:
+        </span>
+        <span>
+          {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+        </span>
+      </div>
+  </div>
+  
+  </div>
 </div>
 </div>
