--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,8 +2,8 @@
 
   <main class="page-content" [ngStyle]="getStyleWithSideBar()" style="padding-bottom: 25px;">
     <div class="sidebar-header sidebar-header-custom">
-      <a>
-        <img src="assets/img/logoEcontract2.svg" alt="Logo" class="img-responsive" width="150px" height="45px" style="position: absolute; top: 6px; left: 27px;" />
+      <a style="cursor: pointer;">
+        <img src="assets/img/logoEcontract2.svg" (click)="backToDashboard()" alt="Logo" class="img-responsive" width="150px" height="45px" style="position: absolute; top: 6px; left: 27px;" />
       </a>
     </div>
     <app-sidebar *ngIf="getShowHideSideBar() && this.mobile === false" (evenSelectSidebar)="getName($event)"></app-sidebar>
