--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -256,7 +256,7 @@
 
                     <div class="col-sm-2 calendar_deadline">
                         <div><i class="fa fa_icon"></i>
-                          <span *ngIf = "item.participant && filter_status == 1" class="item_date">{{ item.participant.contract.sign_time | date: 'dd/MM/yyyy HH:mm:ss'}}</span>
+                          <span *ngIf = "item.participant && filter_status == 1" class="item_date">{{ item.participant.contract.sign_time | date: 'dd/MM/yyyy'}}</span>
                           <span *ngIf = "item.participant && filter_status == 4" class="item_date">{{ signTime(item) | date: 'dd/MM/yyyy HH:mm:ss'}}</span>
                           <!-- <span class="item_date">{{item.participant.contract.updated_at | date: 'dd/MM/yyyy HH:mm:ss'}}</span> -->
                         </div>
@@ -712,7 +712,7 @@
                     </div>
 
                     <div class="col-sm-2 calendar_deadline">
-                        <div><i class="fa fa-calendar fa_icon"></i><span *ngIf = "item.participant" class="item_date">{{item.participant.contract.sign_time | date: 'dd/MM/yyyy HH:mm:ss'}}</span></div>
+                        <div><i class="fa fa-calendar fa_icon"></i><span *ngIf = "item.participant" class="item_date">{{item.participant.contract.sign_time | date: 'dd/MM/yyyy'}}</span></div>
                     </div>
 
                     <div style="cursor: pointer;" class="col-sm-1 item_icon" (click)="toggleOne(item, index1)">
@@ -958,7 +958,7 @@
                     </div>
 
                     <div class="col-sm-2 calendar_deadline">
-                        <div><i class="fa fa-calendar fa_icon"></i><span *ngIf = "item.participant" class="item_date">{{item.participant.contract.sign_time | date: 'dd/MM/yyyy HH:mm:ss'}}</span></div>
+                        <div><i class="fa fa-calendar fa_icon"></i><span *ngIf = "item.participant" class="item_date">{{item.participant.contract.sign_time | date: 'dd/MM/yyyy'}}</span></div>
                     </div>
 
                     <div class="col-sm-1 item_icon">
