--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -237,7 +237,7 @@ h3{
   background-color: #FFFFFF;
   border-radius: 12px;
   padding: 16px;
-  // height: 100%;
+  height: 100%;
 }
 
 .row_text{
