--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -1012,7 +1012,6 @@
             <p>của {{countPage()}} trang</p>
         </div>
     </div>
-      <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
       <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
       </div>
     </div>
@@ -1116,7 +1115,7 @@
               <div class="col-sm-1 bg-header"></div>
           </div>
           <div *ngIf="pageTotal > 0" class="table-contract">
-            <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
+            <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
                 <div class="row">
                   <!--Cột 1-->
                   <!-- <div class="col-xxl-1 col-md-1 item_icon">
@@ -1252,10 +1251,41 @@
         </div>
         <div class="footer_title"></div>
         <div class="footer_pagination">
-            <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getPageData()" previousLabel="" nextLabel=""></pagination-controls>
+            <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; downloadMany()" previousLabel="" nextLabel=""></pagination-controls>
+            <div class="enterPage" *ngIf="pageTotal > 0">
+              <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+              <p>của {{countPage()}} trang</p>
+          </div>
         </div>
-        <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
+        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
         </div>
+    </div>
+    
+    <div class="contract_footer_responsive">
+      <div class="contract_footer_per_page_responsive">
+          <div>Số lượng hiển thị&nbsp;</div>
+          <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
+            <option value="" hidden>10</option>
+            <option *ngFor="let d of this.pageOptions">{{d}}</option>
+          </select>
+        <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+      </div>
+    <div class="footer_pagination">
+      <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+      <div class="enterPage" *ngIf="pageTotal > 0">
+          <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+          <p>của {{countPage()}} trang</p>
+      </div>
+      </div>
+        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      </div>
+    </div>
+    <div class="contract_footer_pagination_responsive">
+      <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+      <div class="enterPage" *ngIf="pageTotal > 0">
+          <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+          <p>của {{countPage()}} trang</p>
+      </div>
     </div>
 </div>
 
@@ -1328,7 +1358,7 @@
               <div class="col-sm-1 bg-header"></div>
           </div>
           <div *ngIf="pageTotal > 0" class="table-contract">
-            <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
+            <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
                 <div class="row">
 
                     <!--Cột 1-->
@@ -1515,7 +1545,7 @@
             <div class="col-sm-1 bg-header"></div>
         </div>
         <div *ngIf="pageTotal > 0" class="table-contract">
-          <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
+          <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
               <div class="row">
                   <!--Cột 1-->
                   <!-- <div class="col-xxl-1 col-md-1 item_icon" *ngIf="this.filter_status == 0">
