--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -43,7 +43,7 @@
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-12 item_folder_name" (click)="openFolder(item)">
-              <img src = "../../../assets/img/contract.svg" height="24px">
+              <img src = "../../../assets/img/folder-contract.svg" height="24px">
               <a>
               {{item.name}}
               </a>
@@ -51,12 +51,14 @@
           </div>
         </div>
         <div class="col-md-3 calendar_create">
-          <div><i class="fa fa-calendar fa_icon"></i>
+          <div><i class="fa fa_icon"></i>
+            <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
             <span class="item_date">{{getDateTime(item.createdAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
           </div>
         </div>
         <div class="col-md-3 calendar_last_updated">
-          <div><i class="fa fa-calendar fa_icon"></i>
+          <div><i class="fa fa_icon"></i>
+            <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
             <span class="item_date">{{getDateTime(item.updatedAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
           </div>
         </div>
@@ -154,12 +156,14 @@
               </div>
             </div>
             <div class="col-md-3 calendar_create">
-              <div><i class="fa fa-calendar fa_icon"></i>
+              <div><i class="fa fa_icon"></i>
+                <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
                 <span class="item_date">{{getDateTime(item.createdAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
               </div>
             </div>
             <div class="col-md-3 calendar_last_updated">
-              <div><i class="fa fa-calendar fa_icon"></i>
+              <div><i class="fa fa_icon"></i>
+                <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
                 <span class="item_date">{{getDateTime(item.updatedAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
               </div>
             </div>
@@ -216,14 +220,20 @@
 
             <!--Cột 2: Ngày tạo-->
             <div class="col-md-3 calendar_create">
-                <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{
-                  item.type == 0 ? (item.createdAt | date: 'dd/MM/yyyy HH:mm') : (item.contract.created_at | date: 'dd/MM/yyyy HH:mm')}}</span></div>
+                <div><i class="fa fa_icon"></i>
+                  <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
+                  <span class="item_date">{{
+                    item.type == 0 ? (item.createdAt | date: 'dd/MM/yyyy HH:mm') : (item.contract.created_at | date: 'dd/MM/yyyy HH:mm')}}</span>
+                </div>
             </div>
 
             <!--Cột 3: Ngày hết hạn ký-->
             <div class="col-md-3 calendar_last_updated">
-                <div *ngIf="item.type !== 1"><i class="fa fa-calendar fa_icon"></i><span class="item_date">
-                  {{item.updatedAt | date: 'dd/MM/yyyy HH:mm'}}</span></div>
+                <div *ngIf="item.type !== 1">
+                  <i class="fa fa_icon"></i>
+                  <img src = "../../../assets/img/calendar-tick-contract.svg" height="20px">
+                  <span class="item_date">{{item.updatedAt | date: 'dd/MM/yyyy HH:mm'}}</span>
+                </div>
             </div>
 
             <!--Cột 4: Thao tác-->
