--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -101,22 +101,24 @@
 }
 
 .item_folder {
-  border: 1px solid #106DB6;
+  // border: 1px solid #106DB6;
   border-radius: 10px;
   padding: 8px;
   margin-top: 10px;
   line-height: 24px;
+  border-radius: 8px;
+  
 }
 
 .item_folder:hover{
-  background-color: rgb(255, 254, 254);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: #F8FAFF;
+  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .item_folder_name {
   font-weight: 500;
   font-size: 16px;
-  color: #106DB6;
+  color: #00186D;
   cursor: pointer;
 }
 
@@ -141,11 +143,13 @@
 }
 .calendar_create, .folder_code{
   text-align: center;
-  color:hsl(206, 84%, 39%)
+  color: var(--Text-Secondary, #8E9AB0);
+  font-weight: 400;
 }
 .calendar_last_updated, .folder_code {
   text-align: center;
-  color:hsl(145, 79%, 38%)
+  color: var(--Text-Secondary, #8E9AB0);
+  font-weight: 400;
 }
 .item_date{
   padding-left: 3px;
