--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -1,19 +1,19 @@
-<!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row" style="padding: 10px; ">
+<p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row" style="padding: 10px; ">
     <ng-template #options let-item>
-        <span style="margin: auto;width: 50%;">{{item.label | translate}}</span>
+        <span class="button-classify">{{item.label | translate}}</span>
     </ng-template>
-</p-selectButton> -->
+</p-selectButton>
 
 <!--Truong hop dang xu ly va sap het han-->
 <!-- <div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33) && this.isOrg == 'off'" class="col-md-4" class="container-fluid"> -->
-<div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33)" class="col-md-4" class="container-fluid">
+<div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33) && this.isOrg == 'off'" class="col-md-4" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{ item.label | translate}}</span>
         </ng-template>
-      </p-selectButton>
+      </p-selectButton> -->
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
@@ -278,11 +278,11 @@
                this.typeDisplay =='release') && this.isOrg == 'off') && status != 'complete'" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
-      </p-selectButton>
+      </p-selectButton> -->
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
@@ -589,11 +589,11 @@
               && this.typeDisplay !== 'downloadMany' && status == 'complete'" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
-      </p-selectButton>
+      </p-selectButton> -->
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
@@ -780,14 +780,14 @@
 </div>
 
 <!-- HD Hoàn thành -->
-<div *ngIf="(this.filter_status == 30 && this.typeDisplay === 'view')" class="container-fluid">
+<div *ngIf="(this.filter_status == 30 && this.isOrg == 'off' && this.typeDisplay === 'view')" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
-      </p-selectButton>
+      </p-selectButton> -->
     </div>
     <ng-template [ngIf]="!roleMess">
       <div class="row cancel-padding" style="margin: 16px auto;">
@@ -806,7 +806,7 @@
           </button>
         </div>
 
-        <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left" *ngIf="this.isOrg == 'off'">
+        <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left">
           <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn-block btn_cancel">{{'download.multi'|translate}}</button>
         </div>
       </div>
@@ -1048,11 +1048,11 @@
 <div *ngIf="(this.typeDisplay == 'downloadMany' && this.filter_status == 30)">
     <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
-        </p-selectButton>
+        </p-selectButton> -->
       </div>
         <ng-template [ngIf]="!roleMess">
           <div class="row cancel-padding" style="margin: 16px auto;">
@@ -1293,11 +1293,11 @@
 <div *ngIf="(this.typeDisplay == 'release' && this.filter_status == 0)">
     <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
-        </p-selectButton>
+        </p-selectButton> -->
       </div>
         <ng-template [ngIf]="!roleMess">
           <div class="row cancel-padding" style="margin: 16px auto;">
@@ -1489,11 +1489,11 @@
 <div *ngIf="(this.typeDisplay == 'multiDeleteDraft' && this.filter_status == 0)">
   <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <!-- <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
-        </p-selectButton>
+        </p-selectButton> -->
       </div>
       <ng-template [ngIf]="!roleMess">
         <div class="row cancel-padding" style="margin: 16px auto;">
