Thay doi mau button Lien ket Sso

--- a/src/app/main/dialog/account-link-dialog/account-link-dialog.component.scss
+++ b/src/app/main/dialog/account-link-dialog/account-link-dialog.component.scss
@@ -28,6 +28,8 @@
       border-radius: 6px;
       border: none !important;
       margin: 5px;
+      background-color: #0041C4;
+      color: #FFFFFF;
     }
 
     .link_sso__cancel-btn {
