fix lỗi changTab bị bất đồng bộ

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -6,10 +6,10 @@
 
 <!--Truong hop dang xu ly va sap het han-->
 <!-- <div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33) && this.isOrg == 'off'" class="col-md-4" class="container-fluid"> -->
-<div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33)" class="col-md-4" class="container-fluid">
+<div #mydiv *ngIf="(this.filter_status == 20 || this.filter_status == 33) && this.isOrg == 'off'" class="col-md-4" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{ item.label | translate}}</span>
         </ng-template>
@@ -278,7 +278,7 @@
                this.typeDisplay =='release') && this.isOrg == 'off') && status != 'complete'" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
@@ -589,7 +589,7 @@
               && this.typeDisplay !== 'downloadMany' && status == 'complete'" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
@@ -783,7 +783,7 @@
 <div *ngIf="(this.filter_status == 30 && this.typeDisplay === 'view')" class="container-fluid">
   <div class="row container-fluid-bg">
     <div class="margin-top-16">
-      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+      <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
         <ng-template #options let-item>
             <span class="button-classify">{{item.label | translate}}</span>
         </ng-template>
@@ -1048,7 +1048,7 @@
 <div *ngIf="(this.typeDisplay == 'downloadMany' && this.filter_status == 30)">
     <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
@@ -1293,7 +1293,7 @@
 <div *ngIf="(this.typeDisplay == 'release' && this.filter_status == 0)">
     <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
@@ -1489,7 +1489,7 @@
 <div *ngIf="(this.typeDisplay == 'multiDeleteDraft' && this.filter_status == 0)">
   <div class="row container-fluid-bg">
       <div class="margin-top-16">
-        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()" class="row">
+        <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (ngModelChange)="changeTab()" class="row">
           <ng-template #options let-item>
               <span class="button-classify">{{item.label | translate}}</span>
           </ng-template>
