Update giao diện hợp đồng tạo && bỏ scroll báo cáo hđ trạng thái xử lý & hđ nhận

--- a/src/app/main/report/report-contract-receive/report-contract-receive.component.html
+++ b/src/app/main/report/report-contract-receive/report-contract-receive.component.html
@@ -64,7 +64,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;">
-      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="false"
+      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true"
       scrollDirection="horizontal">
 
           <!--header-->
