--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -73,7 +73,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;">
-      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true">
+      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true">
 
           <!--header-->
           <ng-template pTemplate="header">
