--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -29,70 +29,91 @@
         </div>
       </div>
       
-      <div class="small-logo d-flex flex-column justify-content-center">
-        <div>
-          <img src="../../assets/img/EC_new_logo.png" width="300px" style="max-width: 50%;"/>
-        </div>
-      </div>
-      <div class="input-form ng-touched ng-pristine ng-invalid">
-        <form class="form-signin" [formGroup]="resetPasswordForm">
-          <div style="margin: 30px;color:#106DB6; font-size: 30px;">{{'login.reset_password' | translate}}</div>
-          <div style="margin: 30px;font-weight: 500;color: #8f8a8a;">{{'login.password_new.confirm.note' | translate}}</div>
-
-          <div class="form-group">
-            <div class="input-line">
-              <img src="../../assets/img/login_password.svg" class="input-img">
-              <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
-              class="input-text" placeholder="{{'login.password_new' | translate}}"
+      <div class="login-form">
+        <div id="login-form">
+          <div class="small-logo d-flex flex-column justify-content-center">
+            <div>
+              <img
+                src="../../assets/img/EClogo.png"
+                width="300px"
+                style="max-width: 50%;"
               />
-              <div class="icon-password">
-                <i class="fa"
-                  [ngClass]="{
-                    'fa-eye-slash': !fieldTextType,
-                    'fa-eye': fieldTextType
-                  }"
-                  (click)="toggleFieldTextType()"
-                  style="color: #106DB6;"
-                ></i>
-              </div>
             </div>
           </div>
+          <div class="input-form ng-touched ng-pristine ng-invalid">
+            <form class="form-signin" [formGroup]="resetPasswordForm">
+              <div class="header-label">{{'login.reset_password' | translate}}</div>
+              <div class="header-infor">{{'login.password_new.confirm.note' | translate}}</div>
 
-          <div class="form-group">
-            <div class="input-line">
-              <img src="../../assets/img/login_password.svg" class="input-img">
-              <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
-              class="input-text" placeholder="{{'login.password_new.confirm' | translate}}" />
-              <div class="icon-password">
-                  <i class="fa"
-                    [ngClass]="{
-                      'fa-eye-slash': !repeatFieldTextType,
-                      'fa-eye': repeatFieldTextType
-                    }"
-                    (click)="toggleRepeatFieldTextType()"
-                    style="color: #106DB6;"
-                  ></i>
+              <div class="form-group" style="padding-top: 20px;">
+                <div class="input-line">
+                  <img src="../../assets/img/login_password.svg" class="input-img">
+                  <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
+                  class="input-text" placeholder="{{'login.password_new' | translate}}"
+                  />
+                  <div class="icon-password">
+                    <i class="fa"
+                      [ngClass]="{
+                        'fa-eye-slash': !fieldTextType,
+                        'fa-eye': fieldTextType
+                      }"
+                      (click)="toggleFieldTextType()"
+                      style="color: #F0F0F0;"
+                    ></i>
+                  </div>
+                </div>
               </div>
+
+              <div class="form-group" style="padding-top: 20px;">
+                <div class="input-line">
+                  <img src="../../assets/img/login_password.svg" class="input-img">
+                  <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
+                  class="input-text" placeholder="{{'login.password_new.confirm' | translate}}" />
+                  <div class="icon-password">
+                      <i class="fa"
+                        [ngClass]="{
+                          'fa-eye-slash': !repeatFieldTextType,
+                          'fa-eye': repeatFieldTextType
+                        }"
+                        (click)="toggleRepeatFieldTextType()"
+                        style="color: #F0F0F0;"
+                      ></i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+                  <strong>{{errorDetail | translate}}</strong>
+                </p>
+              </div>
+
+              <div class="form-group" style="padding-top: 5px;text-align: center; font-weight: bold">
+                <h5 style="font-family: inherit;">{{'error.password.valid' | translate}}</h5>
             </div>
-          </div>
 
-          <div class="form-group">
-            <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
-              <strong>{{errorDetail | translate}}</strong>
-            </p>
+              <div class="form-group" style="text-align: center;">
+                <button (click)="sendResetPassword();" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+              </div>
+            </form>
           </div>
-
-          <div class="form-group" style="padding-top: 5px;text-align: center; font-weight: bold">
-            <h5 style="font-family: inherit;">{{'error.password.valid' | translate}}</h5>
         </div>
-
-          <div class="form-group" style="text-align: center;">
-            <button (click)="sendResetPassword();" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
-          </div>
-        </form>
       </div>
+      
       <div class="slogan">
-        <div class="bg-footer-login"></div>
+        <div class="bg-footer-login">
+          <div class="footer-text" style="padding-left: 1%;">
+            <span class="copyright">
+              <img src="../../assets/img/icon-park-outline_copyright.svg">
+              {{'footer_text' | translate}}
+            </span>
+          </div>
+          <div class="footer-image" style="padding-right: 1%;">
+            <span class="">
+              <img src="../../assets/img/thumb-CeCA.png" style="width: 190px; height: 46px; top: 9px">
+            </span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
