Fix bug ký nhiều usb token, ký nhiều không hiển thị con dấu

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -1072,7 +1072,7 @@
 </ngx-spinner>
 
 
-<!-- <div class="skeleton-sign position-absolute opacity-0">
+<div class="skeleton-sign position-absolute opacity-0" style="display: none;">
     <div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
     </div>
 
@@ -1108,4 +1108,4 @@
           <img [src]='this.srcMark' style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
       </div>
     </div>
-</div> -->
+</div>
